Remocao de alguns elementos da parte de vistoria

--- a/app/src/main/res/layout/activity_detalhes_vistoria.xml
+++ b/app/src/main/res/layout/activity_detalhes_vistoria.xml
@@ -27,13 +27,13 @@
                     android:id="@+id/equipamentosObrigatorios"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         >
 
+<!--
                         <Spinner
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -83,9 +83,9 @@
                             android:id="@+id/listVEquipamentosObrigatoriosInspecionados"
                             android:layout_gravity="center_horizontal" />
 
+-->
                     </LinearLayout>
                 </RelativeLayout>
-
 
                 <!--TAB3 2-->
                 <RelativeLayout
@@ -98,7 +98,7 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         >
-
+<!--
                         <Spinner
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -146,13 +146,13 @@
                             android:layout_height="180dp"
                             android:id="@+id/listVDemaisEquipamentosInspecionados"
                             android:layout_gravity="center_horizontal" />
-
+-->
                     </LinearLayout>
                 </RelativeLayout>
 
                 <!--TAB3 3-->
                 <RelativeLayout
-                    android:id="@+id/dadosvistoria"
+                    android:id="@+id/vistorias"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -164,7 +164,7 @@
                         android:padding="16dp"
                         android:orientation="vertical">
 
-
+<!--
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -198,12 +198,6 @@
                             android:layout_marginTop="05dp"
                             android:src="@color/nliveo_blue_colorPrimary" />
 
-                        <ListView
-                            android:id="@+id/listVVistorias"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                        </ListView>
 
                         <FrameLayout
                             android:layout_width="match_parent"
@@ -219,6 +213,15 @@
 
                                 />
                         </FrameLayout>
+
+                        -->
+
+                        <ListView
+                            android:id="@+id/listVVistorias"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        </ListView>
                     </LinearLayout>
 
 
