Lista de Equipamentos Inspeção realizada através do AlertDialog

--- a/app/src/main/res/layout/activity_detalhes_vistoria.xml
+++ b/app/src/main/res/layout/activity_detalhes_vistoria.xml
@@ -22,16 +22,99 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <!--TAB3 1-->
+                <!--TAB 1-->
+                <RelativeLayout
+                    android:id="@+id/vistorias"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="16dp"
+                        android:orientation="vertical">
+
+                        <!--
+                                                <TextView
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="wrap_content"
+                                                    android:textAppearance="?android:attr/textAppearanceMedium"
+                                                    android:text="Data de solicitação: "
+                                                    android:id="@+id/dataSolicitacao" />
+
+                                                <EditText
+                                                    android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:hint="Prazo"
+                                                    android:numeric="decimal"
+                                                    android:id="@+id/prazo"/>
+
+                                                <EditText
+                                                    android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:hint="Observação"
+                                                    android:id="@+id/observacao"/>
+
+                                                <Button
+                                                    android:id="@+id/btnConcluirVistoria"
+                                                    android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:text="Concluir"/>
+
+                                                <ImageView
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="1dp"
+                                                    android:layout_marginBottom="05dp"
+                                                    android:layout_marginTop="05dp"
+                                                    android:src="@color/nliveo_blue_colorPrimary" />
+
+
+                                                <FrameLayout
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="match_parent">
+                                                    <com.melnykov.fab.FloatingActionButton
+                                                        android:id="@+id/fab"
+                                                        android:layout_width="wrap_content"
+                                                        android:layout_height="wrap_content"
+                                                        android:layout_gravity="bottom|right"
+                                                        android:layout_margin="16dp"
+                                                        android:src="@drawable/ic_novavistoria"
+                                                        fab:fab_shadow="true"
+
+                                                        />
+                                                </FrameLayout>
+
+                                                -->
+
+                        <ListView
+                            android:id="@+id/listVVistorias"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        </ListView>
+                    </LinearLayout>
+
+
+                </RelativeLayout>
+
+                <!--TAB 2-->
                 <RelativeLayout
                     android:id="@+id/equipamentosObrigatorios"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        >
+                        android:orientation="vertical">
+
+                        <ListView
+                            android:id="@+id/listV_equipamentos_obrigatorios"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
 
 <!--
                         <Spinner
@@ -87,7 +170,7 @@
                     </LinearLayout>
                 </RelativeLayout>
 
-                <!--TAB3 2-->
+                <!--TAB 3-->
                 <RelativeLayout
                     android:id="@+id/demaisequipamentos"
                     android:layout_width="match_parent"
@@ -96,8 +179,14 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        >
+                        android:orientation="vertical">
+
+                        <ListView
+                        android:id="@+id/listV_equipamentos_NAOobrigatorios"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+
 <!--
                         <Spinner
                             android:layout_width="match_parent"
@@ -150,82 +239,7 @@
                     </LinearLayout>
                 </RelativeLayout>
 
-                <!--TAB3 3-->
-                <RelativeLayout
-                    android:id="@+id/vistorias"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
 
-
-                    <LinearLayout
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="16dp"
-                        android:orientation="vertical">
-
-<!--
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Data de solicitação: "
-                            android:id="@+id/dataSolicitacao" />
-
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:hint="Prazo"
-                            android:numeric="decimal"
-                            android:id="@+id/prazo"/>
-
-                        <EditText
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:hint="Observação"
-                            android:id="@+id/observacao"/>
-
-                        <Button
-                            android:id="@+id/btnConcluirVistoria"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Concluir"/>
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginBottom="05dp"
-                            android:layout_marginTop="05dp"
-                            android:src="@color/nliveo_blue_colorPrimary" />
-
-
-                        <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-                            <com.melnykov.fab.FloatingActionButton
-                                android:id="@+id/fab"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="bottom|right"
-                                android:layout_margin="16dp"
-                                android:src="@drawable/ic_novavistoria"
-                                fab:fab_shadow="true"
-
-                                />
-                        </FrameLayout>
-
-                        -->
-
-                        <ListView
-                            android:id="@+id/listVVistorias"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                        </ListView>
-                    </LinearLayout>
-
-
-                </RelativeLayout>
         </FrameLayout>
     </LinearLayout>
 
