Criacao da pagina de detalhes

--- a/app/src/main/res/layout/activity_detalhes_vistoria.xml
+++ b/app/src/main/res/layout/activity_detalhes_vistoria.xml
@@ -187,6 +187,7 @@
                         android:layout_height="match_parent"/>
 
 
+
 <!--
                         <Spinner
                             android:layout_width="match_parent"
@@ -237,6 +238,13 @@
                             android:layout_gravity="center_horizontal" />
 -->
                     </LinearLayout>
+                        <android.support.design.widget.FloatingActionButton
+                            android:id="@+id/float_vistoriar"
+                            android:src="@drawable/abc_ic_commit_search_api_mtrl_alpha"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            />
                 </RelativeLayout>
 
 
