--- a/app/src/main/res/layout/alertdialog_equip_model.xml
+++ b/app/src/main/res/layout/alertdialog_equip_model.xml
@@ -20,10 +20,12 @@
         android:id="@+id/edit_model_oberservacao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Observação"
+        android:text="OK"
         android:textSize="18dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="OK"/>
+        />
 
     <RadioGroup
         android:layout_width="match_parent"
