--- a/app/src/main/res/layout/equipamento_model.xml
+++ b/app/src/main/res/layout/equipamento_model.xml
@@ -12,9 +12,9 @@
         <TextView
             android:id="@+id/item_equipamento"
             android:layout_width="match_parent"
-            android:layout_height="80px"
+            android:layout_height="wrap_content"
             android:text="EQUIPAMENTO"
-            android:gravity=""/>
+            android:textSize="30dp"/>
 
 
     </RelativeLayout>
