--- a/app/src/main/res/layout/inspecao_model.xml
+++ b/app/src/main/res/layout/inspecao_model.xml
@@ -4,20 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+
 
         <TextView
        android:id="@+id/nomeEquip"
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:text="Equipamento"
+       android:textSize="30dp"/>
 
-            />
 
 
-    </RelativeLayout>
 
 </LinearLayout>
