--- a/app/src/main/res/layout/vistoria_model.xml
+++ b/app/src/main/res/layout/vistoria_model.xml
@@ -4,21 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+
 
         <TextView
        android:id="@+id/dataVistoria"
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Data"
-       android:textSize="20sp"
+       android:textSize="30dp"
                              />
 
 
-    </RelativeLayout>
+
 
 </LinearLayout>
