--- a/app/src/main/res/layout/activity_detalhes_vistoria.xml
+++ b/app/src/main/res/layout/activity_detalhes_vistoria.xml
@@ -23,7 +23,7 @@
                 android:layout_height="match_parent">
 
                 <!--TAB 1-->
-                <RelativeLayout
+               <!-- <RelativeLayout
                     android:id="@+id/vistorias"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -36,7 +36,7 @@
                         android:padding="16dp"
                         android:orientation="vertical">
 
-                        <!--
+                        <-
                                                 <TextView
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
                                                         />
                                                 </FrameLayout>
 
-                                                -->
+
 
                         <ListView
                             android:id="@+id/listVVistorias"
@@ -97,7 +97,7 @@
                     </LinearLayout>
 
 
-                </RelativeLayout>
+                </RelativeLayout> -->
 
                 <!--TAB 2-->
                 <RelativeLayout
@@ -244,6 +244,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="5dp"
                             />
                 </RelativeLayout>
 
