--- a/app/src/main/res/layout/inspecao_model.xml
+++ b/app/src/main/res/layout/inspecao_model.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
         <TextView
        android:id="@+id/nomeEquip"
@@ -14,6 +16,9 @@
        android:textSize="30dp"/>
 
 
+
+
+</RelativeLayout>
 
 
 </LinearLayout>
