--- a/app/src/main/res/layout/inspecao_model.xml
+++ b/app/src/main/res/layout/inspecao_model.xml
@@ -16,9 +16,14 @@
        android:textSize="30dp"/>
 
 
-
-
 </RelativeLayout>
+
+    <TextView
+        android:id="@+id/txt_insp_equipamento_situacao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Situação"
+        android:textSize="30dp"/>
 
 
 </LinearLayout>
