--- a/app/src/main/res/layout/vistoria_model.xml
+++ b/app/src/main/res/layout/vistoria_model.xml
@@ -5,16 +5,30 @@
     android:layout_height="match_parent">
 
 
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-        <TextView
-       android:id="@+id/dataVistoria"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:text="Data"
-       android:textSize="30dp"
-                             />
+    <TextView
+        android:id="@+id/dataVistoria"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Data"
+        android:textSize="30dp"
 
+        />
 
+    <TextView
+        android:id="@+id/txt_status_estabelecimento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Status"
+        android:textSize="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
 
 
 </LinearLayout>
